# learnAI

./: .gitignore
001_python/: cafe.py  gemini_test.py
002_crawling/: 고양이.csv  프로젝트.md
002_crawling/____gradio_chatbot/: chatbot.py
002_crawling/____test/: omdbapi_crawl.py
002_crawling/aichatbot/: views.py
002_crawling/crawling/: settings.py  urls.py
002_crawling/webcrawl/: models.py  urls.py  (+2 more)
003_finance/: finance_test.py
004_chatbot/: chatbot_complete.py  chatbot_ui.py  system_prompts_guide.md
005_face_recognition/: cvzone_mesh.py  dlib_test.py  opencv_camera1.py  opencv_image.py
006_aicctv/: 1.12.0  face_faiss.py  faiss_face_recognition_py38_사용안함.py
006_aicctv_작업본/: create_dataset.py  faiss_numpy.py  faiss_train.py  vectordb_create.py
008_ocr/: read_car.py  read_text.py
009_pandas/: test.ipynb
010_safety/: yolo_predict.py  yolo_test.py  yolo_test2.py  yolo_train.py
011_rag/: rag_bge_m3_class_table.py
012_langgraph/: .gitignore  002_langgraph_conditional_edges.py  003_langgraph_comfyui.py  003_langgraph_comfyui_node.py  004_langgraph_comfyui_tools.py  004_langgraph_tools.py  langgraph_exam1.py  langgraph_exam2.py  langgraph_exam3.py  pyproject.toml
012_langgraphX/: 002_langgraph_conditional_edges.py  003_langgraph_comfyui_node.py  004_langgraph_tools.py  004_langgraph_tools_comfyui.py  langgraph_exam1.py  langgraph_exam3.py  main.py
013_mcp/: main.py  mcp_exam.py  mcp_image_generator.py  pyproject.toml
014_aiagent/: .gitignore  lib_rag_bge_m3.py  main.py  pyproject.toml
014_aiagent/rag_data/source/: cs.md
015_webtoon/: build.gradle
ccbb/: .gitignore  README.md  chunk_verify.py  image_test.py  multimodal_rag_bge_m3.py  multimodal_rag_test.py  pyproject.toml  rag_pdf_tables.py
ccbb/___old/: 0611_multimodal_rag_bge_m3.py  0612_multimodal_rag_bge_m3.py  0612_multimodal_rag_test.py  rag_pdf_tables.py  rag_test.py
ccbb/___old/fault_ratio_rag/chunkers/: __init__.py  legal_chunker.py
ccbb/___old/fault_ratio_rag/models/: __init__.py
ccbb/___old/fault_ratio_rag/parsers/: __init__.py  base_parser.py  law_parser.py  pedestrian_parser.py  review_cases_parser.py  standards_parser.py
ccbb/ccbb_html/: analyzing.html  landing.html  result.html  search.html  upload.html
ccbb/fault_ratio_rag/: config.yaml
ccbb/fault_ratio_rag/chunkers/: core_chunker.py  precedent_chunker.py
ccbb/fault_ratio_rag/models/: chunk.py
ccbb/fault_ratio_rag/parsers/: base_parser.py  registry.py  roundabout_parser.py  standards_parser.py
ccbb/multimodal_rag/: __init__.py  config_v1.py  pdf_loader_v1.py  rag_chain_v1.py  rag_core_v1.py  rag_runner_v1.py  vectorstore_v1.py
chatbot/: pyproject.toml  rag_bge_m3_class_table.py  rag_pdf_tables.py
(+158 files in other folders)
