[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.109.1",
    "chromadb>=1.5.9",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.5",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "pdfplumber>=0.11.9",
    "pymupdf>=1.24.0",
    "pillow>=10.0.0",
    "sentence-transformers>=5.5.1",
    "torch>=2.0.0",
]

[tool.uv]
find-links = [
    "https://download.pytorch.org/whl/cu121"  # CUDA 12.1 기준
]
